navbar looks cleaner and built images into home page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,51 @@
-<h1>Welcome to Pohl and Holmes</h1>
+<div class='subhead green-bg white-text'>
+    <div class='dark-green header-style'>
+        <h2>The Basics</h2>
+        <div class='subhead-body'>
+            <div class='left-div'>
+                <h3>What we do</h3>
+                <p>Pohl and Holmes, Incorporated has been providing California
+                   almond growers with quality hulling and shelling services 
+                   since 1990. We take  pride in putting our customers first,
+                   working hard to earn the trust that must be nurtured with
+                   each and every grower. 
+                </p>
+            </div>
+            <div class='anchors'>
+                <div class='anchor-container'>
+                    <img class='anchor' src='../assets/img/harvesting_1.png'>
+                    <div class='anchor-overlay'>
+                        <h3 class='overlay-heading'>Harvesting</h3>
+                    </div>
+                </div>
+                <div class='anchor-container'>
+                    <img class='anchor' src='../assets/img/drying.png'>
+                    <div class='anchor-overlay'>
+                        <h3 class='overlay-heading'>Drying</h3>
+                    </div>
+                </div>
+                <div class='anchor-container'>
+                    <img class='anchor' src='../assets/img/sustainability.png'>
+                    <div class='anchor-overlay'>
+                            <h3 class='overlay-heading'>Sustainability</h3>
+                        </div>
+                </div>
+            </div>
+        </div> 
+    </div>
+</div>
+<div class='subhead grey-bg'>
+    <div class='dark-grey-bg header-style white-text'>
+        <h2>Harvesting</h2>
+    </div>
+</div>
+<div class='subhead green-bg white-text'>
+    <div class='dark-green header-style'>
+        <h2>Drying Services</h2>
+    </div>
+</div>
+<div class='subhead grey-bg'>
+    <div class='dark-grey-bg header-style white-text'>
+        <h2>Sustainability</h2>
+    </div>
+</div>
