changed font moved anchors and changed colors

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<head><link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"></head>
 <app-navbar></app-navbar>
 <div class='main'>
     <router-outlet></router-outlet>
