--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class='dark-green header-style'>
         <h2>The Basics</h2>
         <div class='subhead-body'>
-            <div class='left-div'>
+            <div class='intro-div'>
                 <h3>What we do</h3>
                 <p>Pohl and Holmes, Incorporated has been providing California
                    almond growers with quality hulling and shelling services 
@@ -11,40 +11,58 @@
                    each and every grower. 
                 </p>
             </div>
+        <div class='separator'></div>
             <div class='anchors'>
-                <div class='anchor-container'>
+                <div class='anchor-container' routerLink='.' fragment='harvesting'>
                     <img class='anchor' src='../assets/img/harvesting_1.png'>
                     <div class='anchor-overlay'>
                         <h3 class='overlay-heading'>Harvesting</h3>
                     </div>
+                    <p>
+                        Pohl and Holmes, Inc. can assist you to coordinate your harvesting
+                        operations efficiently, even during the peak of harvest. A successful
+                        harvest begins with good harvesting techniques and product handling. 
+                    </p>
                 </div>
-                <div class='anchor-container'>
+                <div class='anchor-container' routerLink='.' fragment='drying'>
                     <img class='anchor' src='../assets/img/drying.png'>
                     <div class='anchor-overlay'>
                         <h3 class='overlay-heading'>Drying</h3>
                     </div>
+                    <p>
+                        The drying services provided at Pohl & Holmes, Inc. provide
+                        on-site convienience for our customers. We can dry bulk 
+                        loads or bins.
+                    </p>
                 </div>
-                <div class='anchor-container'>
+                <div class='anchor-container' routerLink='.' fragment='sustainability'>
                     <img class='anchor' src='../assets/img/sustainability.png'>
                     <div class='anchor-overlay'>
                             <h3 class='overlay-heading'>Sustainability</h3>
-                        </div>
+                    </div>
+                    <p>
+                        Pohl & Holmes, Inc. is dedicated to sustainable farming 
+                        operations utilizing production practices that respect 
+                        the environment, neighbors and employees. The result is
+                        a plentiful, nutritious and safe food product today and
+                        for future generations.
+                    </p>
                 </div>
             </div>
         </div> 
     </div>
 </div>
-<div class='subhead grey-bg'>
+<div id='harvesting' class='subhead grey-bg'>
     <div class='dark-grey-bg header-style white-text'>
         <h2>Harvesting</h2>
     </div>
 </div>
-<div class='subhead green-bg white-text'>
+<div id='drying' class='subhead green-bg white-text'>
     <div class='dark-green header-style'>
         <h2>Drying Services</h2>
     </div>
 </div>
-<div class='subhead grey-bg'>
+<div id='sustainability' class='subhead grey-bg'>
     <div class='dark-grey-bg header-style white-text'>
         <h2>Sustainability</h2>
     </div>
