--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,41 +1,38 @@
 .subhead{
     height:93vh;
-    // padding-left: 20px;
-    // padding-top: 20px;
 }
 .green-bg{
-    background: #60d194;
+    background: #57bc90;
 }
 .grey-bg{
-    background: #a7a7a7;
+    background: #ffd152;
 }
 .white-text{
     color: white;
 }
 .dark-grey-bg{
-    background-color: #8c8a8a;
+    background-color: #ffa705;
 }
 .dark-green{
-    background-color: #2cba75;
+    background-color: #77c9d4;
 }
 .header-style{
-    padding-left: 20px;
     height: 10vh;
     padding-top: 2vh;
+    h2{
+        padding-left: 20px;
+    }
 }
 .subhead-body{
     padding-top: 4vh;
     color: white;
 }
-.left-div{
-    width: 50%;
-    display: inline-block;
-    vertical-align: top;
+.intro-div{
+    font-size: 22px;
+    padding-left: 30px;
 }
 .anchors{
     text-align: center;
-    display: inline-block;
-    width: 50%;
 }
 .anchor{
     width: 30vw;
@@ -63,7 +60,29 @@
 }
 .anchor-container{
     position: relative;
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+    vertical-align: top;
+    p{
+        width: 30vw;
+        padding-top: 4px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+}
+.anchor-container:focus{
+    outline:none;
 }
 .overlay-heading{
     text-decoration: underline;
+}
+.clear{
+    clear: both;
+}
+.vert-align{
+    vertical-align: none;
+}
+.separator{
+    height: 7vh;
 }
