working on flexd icons

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,6 +16,10 @@
     <div class="navbar-nav animated-underline">
       <a class="nav-item nav-link underline clickable" routerLink='/contact' routerLinkActive="active">Contact Us<span class="sr-only">(current)</span></a>
     </div>
-    
+    <div class="navbar-nav animated-underline">
+      <a class="nav-item nav-link underline clickable" routerLink='/contact' routerLinkActive="active">
+          <mat-icon svgIcon='phone'></mat-icon>
+      </a>
+    </div>
   </div>
 </nav>
